# CALCULATORS

./: .gitignore  README.md
ASP.NET_MVC/: MyCalculator_v4.0.csproj  MyCalculator_v4.0.sln  Program.cs  script_unix.sh  script_win.ps1
ASP.NET_MVC/Controllers/: CreditController.cs  DepositController.cs  HomeController.cs
ASP.NET_MVC/Models/: CalculatorModel.cs  CreditModel.cs  DepositModel.cs  History.cs  Point.cs
ASP.NET_MVC/Properties/: launchSettings.json
ASP.NET_MVC/ViewModels/: CalculatorViewModel.cs  ErrorViewModel.cs  GraphViewModel.cs
ASP.NET_MVC/Views/: _ViewImports.cshtml
ASP.NET_MVC/Views/Credit/: Index.cshtml
ASP.NET_MVC/Views/Deposit/: Index.cshtml
ASP.NET_MVC/Views/Home/: Graph.cshtml  Help.cshtml  Index.cshtml
ASP.NET_MVC/Views/Shared/: _Layout.cshtml  _Layout.cshtml.css
ASP.NET_MVC/wwwroot/css/: site.css
ASP.NET_MVC/wwwroot/js/: graph.js  site.js
CalculatorLibraryCPP/: CMakeLists.txt  CMakePresets.json
CalculatorLibraryCPP/mac_linux_src/: Calculation.h  Credit.cpp  Credit.h  Deposit.cpp  Deposit.h
CalculatorLibraryCPP/mac_src/: Calculation.cpp  Deposit.h  Makefile
CalculatorLibraryCPP/windows_src/: Calculation.cpp  Calculation.h  Credit.cpp  Credit.h  Deposit.cpp  Deposit.h
MAUI/: MAUI.sln  script.txt  script_unix.sh  script_win.ps1  script_win_2.ps1
MAUI/ModelLibrary/: Calculation.cpp  Calculation.h  ModelLibrary.vcxproj  ModelLibrary.vcxproj.filters
MAUI/MyCalculator_v3.0/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MauiProgram.cs  MyCalculator.csproj
MAUI/MyCalculator_v3.0/Model/: CalculatorModel.cs
MAUI/MyCalculator_v3.0/Resources/Styles/: Colors.xaml  Styles.xaml
MAUI/MyCalculator_v3.0/View/: GraphPage.xaml  GraphPage.xaml.cs  HelpPage.xaml  HelpPage.xaml.cs  MainPage.xaml  MainPage.xaml.cs  StringToDoubleConverter.cs
MAUI/MyCalculator_v3.0/ViewModel/: CalculatorViewModel.cs  GraphViewModel.cs
QT/: script_linux.sh  script_mac.sh  script_win.ps1
QT/MyCalculator/: CMakeLists.txt  resources.qrc
QT/MyCalculator/Controller/: controller.cc  controller.h
QT/MyCalculator/Icons/: calc_icon.icns  calc_icon.rc
QT/MyCalculator/Model/: calculator_model.cc  calculator_model.h  credit_model.cc  credit_model.h  deposit_model.cc  deposit_model.h
QT/MyCalculator/View/: credit.cc  credit.h  credit.ui  deposit.cc  deposit.h  deposit.ui  graph.cc  graph.h  graph.ui  mainwindow.cc  mainwindow.h  mainwindow.ui
